<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dissekcorportion.notesjava.NotasFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notas" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dissekcorportion.notesjava.NotasFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_notas" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dissekcorportion.notesjava.NotasFragment"
        android:label="@string/title_account"
        tools:layout="@layout/activity_notas" />
</navigation>